--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-asgiref==3.5.2
-Django==4.1
-mysqlclient==2.1.1
-Pillow==9.2.0
-PyQt5==5.15.7
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.11.0
-sqlparse==0.4.2
-tzdata==2022.2
+streamlit==1.19.0
+GitPython==3.1.31
+numpy==1.24.2
+openpyxl==3.1.1
+pandas==1.5.3
+scipy==1.10.1
+seaborn==0.12.2
+spacy==3.5.0
